--- a/src/assets/css/side.css
+++ b/src/assets/css/side.css
@@ -6,7 +6,7 @@
   padding-top: 20px;
   width: 15%;
   float: left;
-  height: 100%;
+  /*height: 100%;*/
   overflow-y: auto;
   background-color: #E5E9F2;
 }
